trying to fix font on safari

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -6,6 +6,7 @@ html, body {
     overflow-x: hidden;
     /* background-color: black; */
     -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-backface-visibility: hidden;
 
 
 }
